# IAAE

./: .editorconfig  .env.example  .gitattributes  .gitignore  CHANGELOG.md  IAAE.code-workspace  LICENSE  README.md  executar_carga_controlada_windows.bat  executar_teste_windows.bat  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  (+1 more)
config/: catmat_eletricos.csv  material_categories.yml  material_overrides.csv  modelagem_medidores.csv  pdm_eletricos_selecionados.csv
dashboard/: IAAE_Dashboard_Final.pbix  README.md
data/: README.md
docs/: ARQUITETURA.md  DICIONARIO_DADOS.md  MEDIDAS_POWERBI.dax  METODOLOGIA_PREVISAO.md  METRICAS_PROJETO.json  MODELO_DADOS_POWERBI.md  POWER_BI_PORTABILIDADE.md  PUBLICACAO_GITHUB.md  REPRODUCAO.md
scripts/: abrir_relatorio.ps1  auditar_contrato_integracao_medidores.py  auditar_estado_uf_powerbi.py  auditar_selecao_catmat.py  avaliar_cobertura_catmat.py  catalogar_catmat.py  diagnostico_ambiente.ps1  expandir_catalogo_medidores.py  extrair_piloto_medidores.py  gerar_analises_iaae.py  gerar_previsao_catmat_v2.py  gerar_previsao_hierarquica_medidores.py  install_vscode_extensions.ps1  integrar_medidores_staging_powerbi.py  preparar_modelagem_medidores.py  preparar_modelo_powerbi.py  publicar_staging_powerbi.py  qa.ps1  setup_vscode.ps1  validar_repositorio_publico.py
src/: __init__.py  api_client.py  classifier.py  pipeline.py  quality.py  reporting.py  settings.py  storage.py  text_utils.py  transform.py
tests/: test_classifier.py  test_estado_powerbi.py  test_reporting.py  test_transform_quality.py
(+5 files in other folders)
